# zephyr_uts2

./: .gitignore  zephyrproject.code-workspace
uts2/: CMakeLists.txt  prj.conf
uts2/boards/arm/uts2_motherboard/: Kconfig.defconfig  Kconfig.uts2_motherboard  board.yml  uts2_motherbaord.yaml  uts2_motherboard.dts  uts2_motherboard_defconfig
uts2/boards/arm/uts2_motherboard/support/: openocd.cfg
uts2/src/: main.c  sensor_thread.c  sensor_thread.h
uts2/west-manifest/: west.yml
uts2_motherboard/: CMakeLists.txt
uts2_motherboard/boards/arm/uts2_motherboard/: Kconfig.board  Kconfig.defconfig  uts2_motherboard.dts  uts2_motherboard_defconfig
uts2_work/: CMakeLists.txt  Kconfig  app.overlay  nucleo_f413zh_dwc2.overlay  prj.conf  test.txt
uts2_work/drivers/hc_595_chain/: CMakeLists.txt  Kconfig  hc595_chain.c  hc595_chain.h
uts2_work/drivers/seq_mux_adc/: CMakeLists.txt  Kconfig  seq_mux_adc.c  seq_mux_adc.h
uts2_work/dts/bindings/: custom,hc595-chain.yaml  custom,seq-mux-adc.yaml  seq_pins.yaml
uts2_work/src/: adc_monitor.c  adc_monitor.h  adc_thread.c  adc_thread.h  board_define.h  dio_thread.c  dio_thread.h  global_params.h  ina228_stram_thread.h  ina228_stream_thread.c  ina228_stream_thread.h  main.c  memomory_link_macro.h  out_and_power_control.c  param_server.c  param_server.h  system_data_bus.h  system_status.h  usb_thread.c  usb_thread.h
